fix: forced person names to not wrap

--- a/_sass/_team.scss
+++ b/_sass/_team.scss
@@ -158,6 +158,7 @@ body {
     display: inline-block;
     letter-spacing: 2px;
     width: 100%;
+    white-space: nowrap;
 }
 .team-title h5 {
     margin-bottom: 0px;
